Ingress/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: azurecloudops-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.azuredevopscloud.xyz"
    tls:
      mode: Terminate
      certificateRefs:
      - name: nginx-tls-default
